# RPCoding_Toolbox

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  launch.bat  launch.command  pyproject.toml
.github/workflows/: ci.yml
design/gui/: README.md
docs/: ARCHITECTURE.md  USER_GUIDE.md  irregular_subjects.md
scripts/: build_wordlists.py  fix_first_stims_offset.py  make_brain_icon.py  make_launcher.ps1  setup_env.ps1  setup_env.sh  up_trialinfo_xcheck.py  up_trials_healthcheck.py
src/rpcoding/: __init__.py
src/rpcoding/cli/: __init__.py  main.py
src/rpcoding/core/: __init__.py  clock_fix.py  config.py  first_stims_offset.py  labels.py  manifest.py  matio.py  multipart.py  paths.py  progress.py  retry.py  runner.py  scanner.py  session.py  steps.py  tasks.py  trial_index.py  trials_combine.py  trigger_fix.py  wordlists.py
src/rpcoding/core/audio/: __init__.py  concat.py  denoise.py  io.py
src/rpcoding/core/audio/render/: __init__.py  cache.py  colormap.py  hashing.py  pyramid.py  spectro.py
src/rpcoding/core/events/: __init__.py  block_onsets.py  condition_events.py  cue_events.py
src/rpcoding/core/mfa/: VENDORED.md  __init__.py  ingest.py  models.py  runner.py  up_dict.py
src/rpcoding/core/mfa/pipeline/: mfa_pipeline.py
src/rpcoding/core/mfa/pipeline/conf/: config.yaml
src/rpcoding/core/mfa/pipeline/conf/task/: lexical_repeat.yaml  lexical_repeat_intraop.yaml  lexical_repeat_no_delay.yaml  phoneme_sequencing.yaml  picture_naming.yaml  sentence_repetition.yaml  uniqueness_point.yaml
src/rpcoding/core/mfa/pipeline/dictionary/: english_us_up.dict
src/rpcoding/core/mfa/pipeline/utils/: mfa_utils.py
src/rpcoding/core/rpcode/: __init__.py  errors.py  response_fill.py  rpcode2trials.py
src/rpcoding/core/rpcode/wordlists/: nonword_lst.mat  uniqueness_point_stimuli.csv  word_lst.mat
src/rpcoding/core/trialinfo/: __init__.py  build.py  merge.py
src/rpcoding/gui/: __init__.py  app.py  batch_dialog.py  clock_fix.py  config.py  dashboard.py  editor_loader.py  error_dialog.py  first_run_dialog.py  hover_cursor.py  loading_dialog.py  log_dialog.py  main_window.py  multipart_merge.py  progress_dialog.py  settings_dialog.py  theme.py  trigger_fix.py
src/rpcoding/gui/assets/: __init__.py
src/rpcoding/gui/editor/: __init__.py  debounce.py  header_column.py  interactive_viewbox.py  label_lane.py  playback.py  render_jobs.py  selectable_viewbox.py  selection.py  spectrogram_lane.py  toolbar.py  track_container.py  trial_info_panel.py  waveform_lane.py
src/rpcoding/gui/widgets/: __init__.py  state_chip.py  state_dot.py  step_row.py  subject_list.py  subject_row.py
src/rpcoding/gui/workers/: __init__.py  summary_scanner.py  worker.py
tests/: conftest.py  test_audio_concat.py  test_audio_editor.py  test_batch_and_settings.py  test_block_onsets.py  test_clock_anchor_label.py  test_clock_anchors.py  test_clock_fix.py  test_config.py  test_core_has_no_qt.py  test_dashboard_v2.py  test_denoise.py  test_denoise_step.py  test_editor_save_prompt.py  test_events.py  test_first_stims_offset.py  test_gui_shell.py  test_label_tracks.py  test_labels.py  test_loading_and_cursor.py  test_make_events_clock_fit.py  test_manual_coding.py  test_manual_coding_editor.py  test_matio.py  test_mfa.py  test_multipart.py  test_paths.py  test_phoneme_sequencing.py  test_progress.py  test_project_session.py  test_render_cache.py  test_render_pyramid.py  test_render_spectro.py  test_response_fill.py  test_retry.py  test_rpcode2trials.py  test_smoke.py  test_summary_scanner.py  test_tasks.py  test_trial_index.py  (+6 more)
tests/fixtures/label_samples/: first_stims.txt
(+3 files in other folders)
