[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpcoding"
version = "0.1.0"
description = "Cogan Lab Response Coding preprocessing toolbox (PySide6 desktop app + pipeline)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cogan Lab" }]
# Runtime dependencies are provided by the conda environment (see environment.yml),
# including montreal-forced-aligner which is conda-only. Install this package itself with
# `pip install -e . --no-deps` (the conda env already supplies numpy/scipy/PySide6/etc.).
dependencies = []

[project.optional-dependencies]
# Pip-installable deps for CI / non-conda headless testing (MFA is conda-only, excluded).
test = [
    "numpy",
    "scipy",
    "soundfile",
    "librosa",
    "pyyaml",
    "hydra-core",
    "omegaconf",
    "textgrid",
    "pytest>=7",
    "pytest-cov>=4",
]
dev = [
    "rpcoding[test]",
    "ruff>=0.4",
    "black>=24",
    "pre-commit>=3",
]

[project.scripts]
rpcoding = "rpcoding.cli.main:main"

[project.gui-scripts]
rpcoding-gui = "rpcoding.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundled lab word/nonword reference lists used by the write-Trials step.
"rpcoding.core.rpcode" = ["wordlists/*.mat"]

[tool.black]
line-length = 100
target-version = ["py311"]
# Vendored third-party MFA pipeline — keep upstream formatting.
force-exclude = "src/rpcoding/core/mfa/pipeline/"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Vendored third-party MFA pipeline — do not lint.
extend-exclude = ["src/rpcoding/core/mfa/pipeline"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# imports follow pytest.importorskip guards (skip the module when PySide6 is absent)
"tests/test_gui_shell.py" = ["E402"]
"tests/test_audio_editor.py" = ["E402"]
"tests/test_label_tracks.py" = ["E402"]
"tests/test_manual_coding_editor.py" = ["E402"]
"tests/test_batch_and_settings.py" = ["E402"]
"tests/test_dashboard_v2.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
